# kale-nexus

./: .gitignore  LICENSE  Makefile  not-to-forget.md
contracts/oracle_adapter/: Cargo.toml
contracts/oracle_adapter/src/: lib.rs  reflector.rs  test.rs
contracts/oracle_adapter/test_snapshots/test/: decimals_mismatch_ok_with_poke.1.json  error_cases_unknown_asset_nohistory_rounding_and_auth.1.json  history_cap_trim_and_large_twap_request.1.json  history_trims_to_cap.1.json  history_trims_to_cap_keeps_latest.1.json  init_and_permissions.1.json  poke_before_set_feeder_panics.1.json  poke_unknown_pair_panics.1.json  pull_requires_reflector_set_panics.1.json  pull_twice_without_time_advance_calls_reflector_but_skips_duplicate_write.1.json  push_price_twap_and_staleness.1.json  reflector_call_spy_records_args_and_oracle_persists.1.json  set_feeder_before_init_panics.1.json  set_feeder_requires_admin_auth.1.json  set_reflector_and_pull_updates_history.1.json  set_reflector_pull_and_read_spot.1.json  set_reflector_requires_admin_auth.1.json  spot_and_twap_work.1.json  spot_future_ts_does_not_underflow.1.json  spot_rescales_when_decimals_mismatch.1.json  spot_staleness_guard_panics.1.json  stale_guard_panics.1.json  staleness_guard_trips.1.json  twap_equal_weight_over_three_points.1.json  twap_equal_weight_rescales_to_cfg_decimals.1.json  twap_no_points_in_window_panics.1.json  twap_over_window_ok.1.json  twap_start_saturates_when_window_gt_now.1.json  twap_window_zero_panics.1.json  unknown_asset_panics.1.json  upsert_asset_requires_admin_auth.1.json  (+2 more)
frontend/: package.json  (+2 more)
(+40 files in other folders)
