[package]
name = "oracle_adapter"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true


[dependencies]
soroban-sdk = "23.0.2"

[dev-dependencies]
soroban-sdk = { version = "23.0.2", features = ["testutils"] }
